# confirm-asset-fetcher

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  fetch_assets.py  general.yml-example  pyproject.toml
